--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "relations",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.13.3"
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "husky": "^3.0.0",
+    "lerna": "^3.15.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
