--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "private": true,
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx,.js,jsx",
+    "lint:fix": "npm run lint -- --fix",
     "lint:git": "eslint --ext .ts,.tsx,.js,jsx `git diff-index --diff-filter=ACM --name-only HEAD | grep -E '.(js|jsx|ts|tsx)$'`"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.7.2",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-i18n": "^1.2.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jest": "^22.10.0",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.0.0",
     "lerna": "^3.15.0"
   },
