--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,14 +5,19 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
+    "start": "sls offline start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
+    "axios": "^0.19.0",
     "serverless-sentry": "^1.2.0",
+    "socks-proxy-agent": "^4.0.2",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/hapi__joi": "^16.0.4",
     "@types/node": "^10.12.18",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-domain-manager": "^3.3.0",
