--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -54,3 +54,10 @@ functions:
       - http:
           method: get
           path: hello
+  search:
+    handler: handler.search
+    events:
+      - http:
+          method: get
+          path: search
+
