--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "axios": "^0.19.0",
+    "node-html-parser": "^1.1.16",
     "serverless-sentry": "^1.2.0",
     "socks-proxy-agent": "^4.0.2",
     "source-map-support": "^0.5.10"
@@ -18,7 +19,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/hapi__joi": "^16.0.4",
-    "@types/node": "^10.12.18",
+    "@types/node": "^10.17.9",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-domain-manager": "^3.3.0",
     "serverless-offline": "^5.12.1",
