--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.8.4",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "antd": "^3.26.3",
     "less": "^3.10.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -32,6 +33,8 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "next": "^9.1.5",
     "serverless-next.js": "^1.7.0"
   }
