--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "next": "^9.1.5",
+    "null-loader": "^3.0.0",
     "serverless-next.js": "^1.7.0"
   }
 }
