--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -10,6 +10,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.26.3",
+    "axios": "^0.19.0",
     "less": "^3.10.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
