--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -12,6 +12,7 @@
     "antd": "^3.26.3",
     "axios": "^0.19.0",
     "less": "^3.10.3",
+    "next-ga": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "typescript": "3.5.3"
