--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -11,6 +11,7 @@
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
+    "is-mobile": "^2.1.0",
     "less": "^3.10.3",
     "next-ga": "^2.3.4",
     "react": "^16.8.6",
