--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -11,10 +11,11 @@
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
-    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "is-mobile": "^2.1.0",
+    "js-cookie": "^2.2.1",
     "less": "^3.10.3",
+    "next-cookies": "^2.0.3",
     "next-ga": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -22,8 +23,8 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/server/index.js"
+    "build": "next build",
+    "start": "next start"
   },
   "browserslist": {
     "production": [
@@ -38,10 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.4",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "next": "^9.1.5",
-    "next-i18next": "^4.0.0",
     "null-loader": "^3.0.0",
     "serverless-next.js": "^1.7.0"
   }
