--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
@@ -19,6 +19,7 @@
     "next-ga": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-relation-graph": "^0.1.5",
     "typescript": "3.5.3"
   },
   "scripts": {
