chore: add new api

--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -62,4 +62,11 @@ functions:
           method: get
           path: test
           cors: true
+  extract:
+    handler: handler.extract
+    events:
+      - http:
+          method: get
+          path: extract
+          cors: true
 
