--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "node-html-parser": "^1.1.16",
+    "qs": "^6.9.1",
     "serverless-sentry": "^1.2.0",
     "socks-proxy-agent": "^4.0.2",
     "source-map-support": "^0.5.10"
@@ -20,6 +22,7 @@
     "@types/aws-lambda": "^8.10.17",
     "@types/hapi__joi": "^16.0.4",
     "@types/node": "^10.17.9",
+    "@types/qs": "^6.9.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-domain-manager": "^3.3.0",
     "serverless-offline": "^5.12.1",
