--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "axios": "^0.19.0",
+    "dynamoose": "^1.11.1",
     "lodash": "^4.17.15",
     "node-html-parser": "^1.1.16",
     "qs": "^6.9.1",
