--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -15,7 +15,7 @@ jobs:
     - run: npm i -g serverless
     - run: npm i
       working-directory: ./packages/backend
-    - run: sls deploy
+    - run: sls deploy --stage prod
       working-directory: ./packages/backend
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key_id }}
