chore: update github workflow

--- a/.github/workflows/deploy_dev_backend.yml
+++ b/.github/workflows/deploy_dev_backend.yml
@@ -2,10 +2,10 @@ on:
   push:
     branches:
       - master
-    # paths:
-    #   - 'packages/backend/**/*'
-    #   - '.github/deploy_dev_backend.yml'
-name: Deploy backend
+    paths:
+      - 'packages/backend/**'
+      - '.github/workflows/deploy_dev_backend.yml'
+name: Deploy dev backend
 jobs:
   deploy:
     name: deploy
