chore: modify iam role

--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -9,6 +9,7 @@ service:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
+        - dynamodb:DescribeTable
       Resource:
         - { "Fn::GetAtt": ["RelationTable", "Arn" ] }
 
