--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "axios": "^0.19.0",
+    "cls-hooked": "^4.2.2",
     "dynamoose": "^1.11.1",
     "lodash": "^4.17.15",
     "node-html-parser": "^1.1.16",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/cls-hooked": "^4.3.0",
     "@types/hapi__joi": "^16.0.4",
     "@types/node": "^10.17.9",
     "@types/qs": "^6.9.0",
