--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "start": "DEBUG=* sls offline start",
+    "start": "sls offline start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
