--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -11,6 +11,7 @@
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
+    "contains-chinese": "^1.0.0",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
