chore: modify dynamodb billing mode

--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -100,7 +100,5 @@ resources:
             KeyType: HASH
           - AttributeName: lang
             KeyType: RANGE
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
+        BillingMode: PAY_PER_REQUEST
         TableName: ${self:custom.relationTable}
