--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "contains-chinese": "^1.0.0",
     "express": "^4.17.1",
+    "get-user-locale": "^1.3.0",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "next-ga": "^2.3.4",
