--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "version": {
+      "message": "chore(release): publish %s"
+    }
+  },
   "version": "independent"
 }
