chore: use conventionalCommits by default

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,9 @@
   "command": {
     "version": {
       "message": "chore(release): publish %s"
+    },
+    "publish": {
+      "conventionalCommits": true
     }
   },
   "version": "independent"
